feat: html文件动态指向路径

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>Title</title>
-  <script src='../build/typescript-rollup-starter.umd.js'></script>
+  <script src='../build/--libraryname--.umd.js'></script>
 </head>
 <body>
 </body>
